src/objects/Experience__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyContactPhone__c</fullName>
        <label>Company Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyPosition__c</fullName>
        <label>Company Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Experience (Employee)</relationshipLabel>
        <relationshipName>ExperienceTest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectPosition__c</fullName>
        <label>Project Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedTo</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Experience</relationshipLabel>
        <relationshipName>Experience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <label>School Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Experience</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Educational_Experience</fullName>
        <active>true</active>
        <label>Educational Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Experience</fullName>
        <active>true</active>
        <label>Project Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Experience</fullName>
        <active>true</active>
        <label>Work Experience</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>